BUGFIX:SSF-30 - Fixed dropdown cutoff in all browsers.

--- a/scss/_AssetAdmin.scss
+++ b/scss/_AssetAdmin.scss
@@ -4,9 +4,6 @@
 			.cms-edit-form.AssetAdmin {
 				overflow-y:auto; //adds scrolling only to the datagrid 
 			}
-			.cms-content-tools .cms-panel-content .cms-search-form {
-				overflow:hidden; //removes scollbar from search field in filter
-			}	
 	}
 	.cms-content-header-tabs {
 		.ui-tabs-nav {
